[gd_scene load_steps=6 format=3 uid="uid://35a312ighjfa"]

[ext_resource type="Script" path="res://src/main/scene/goods/goods.gd" id="1_6hwpv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t2er2"]
radius = 4.0

[sub_resource type="Animation" id="Animation_bk2gt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("default_item_effect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dkr62"]
resource_name = "idle"
length = 1.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("default_item_effect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.835), Vector2(0.85, 1.15), Vector2(1.05, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m75ki"]
_data = {
"RESET": SubResource("Animation_bk2gt"),
"idle": SubResource("Animation_dkr62")
}

[node name="goods" type="CharacterBody2D"]
show_behind_parent = true
texture_filter = 1
collision_mask = 12
script = ExtResource("1_6hwpv")

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t2er2")

[node name="default_item_effect" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="anim_player" type="AnimationPlayer" parent="default_item_effect"]
root_node = NodePath("../..")
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_m75ki")
}

[node name="image" type="TextureRect" parent="default_item_effect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(4, 4)
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
expand_mode = 1
stretch_mode = 5
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="ReferenceRect" type="ReferenceRect" parent="default_item_effect/image"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editor_only = false
